--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,25 @@
 body {
-	font-family: 'Cuprum', sans-serif;
-}
-.topmenu_line {
-	background-color: #293449;
-	height: 42px;
-}
-h1 {
-	font-style: italic;
-	color: #ee3643;
+	margin: 0;
+	padding: 0;
+	font-family: "Cuprum", Arial, sans-serif;
 	font-size: 16px;
+	line-height: 23px;
 	font-weight: 400;
-	line-height: 23px; 
-}
-nav {
+	color: rgb(0,0,0);
 
+	background-color: #ffffff;
 }
+a {
+	text-decoration: none;
+  
+}
+.main-navigation {
+	font-size: 17px;
+	line-height: 17px;
+	color: #ffffff;
+	background-color: #31415b
+}	
 ul {
-	
-
-}
-li {
-	position: relative;
 	list-style:none;
-	display: inline-block;
-	padding: 32px;
-
 }
-
-
-
 
