--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,10 @@ a {
 	color: #ffffff;
 	background-color: #31415b
 }	
-ul {
-	list-style:none;
+.site-navigation, 
+.user-navigation {
+	list-style: none;
 }
-
+.site-navigation a {
+	color: #ffffff;
+}
