--- a/css/style.css
+++ b/css/style.css
@@ -26,13 +26,30 @@ header {
 
 }
 
+.header-top-menu:hover {
+	background-color: #212939;
+}
+
+
 .main-navigation {
 	font-size: 17px;
 	line-height: 17px;
 	color: #ffffff;
 
-	background-color: #31415b
+	background-color: #31415b;
+	border-bottom: 5px solid #293349;
 }	
+
+.main-navigation li:hover,
+.main-navigation li:focus {
+	background: #293449;
+
+}
+
+.main-navigation li:active {
+	background: #1d2639;
+	color: #508534; /*Проверить цвет*/
+}
 
 .site-navigation, 
 .user-navigation {
@@ -48,8 +65,26 @@ header {
 	border-bottom: 5px solid #b42833;
 }
 
+.header-top-menu img:hover, 
+.header-top-menu img:focus {
+	background-color: #ca2b36;
+}
+
+.header-top-menu img:active {
+	background-color: #ba2731;
+}
+
 .header-order {
 	background-color:#62a63d;
+}
+
+.header-order:hover, 
+.header-order:focus {
+	background-color: #5fbb2d;
+}
+
+.header-order:active {
+	background-color: #508534;
 }
 
 .header-contacts {
@@ -78,10 +113,25 @@ header {
 
 }
 
+
 .sing-in a, .registration a {
     background: #ffffff;
     text-decoration: none;
     color: rgb(0,0,0);;
+}
+
+
+.sing-in a:focus,
+.sing-in a:hover,
+.registration a:focus,
+.registration a:hover
+ {
+	color: #ee3643; /*Проверить цвет*/
+}
+
+.sing-in a:active,
+.registration a:active {
+	color: c5c5c5;
 }
 
 h1 {
@@ -91,4 +141,77 @@ h1 {
 	color: #ee3643;
 	text-align: left;
 }
-  
+
+.tehnomart-goods-group li {
+	list-style: none;
+}
+
+.tehnomart-goods-group a {
+	font-size: 14px; /*?*/
+    line-height: 18px;
+	color: #ffffff;
+	background-color: #e5e5e5;
+	text-align: center;
+} 
+
+.tehnomart-goods-group a:hover,
+.tehnomart-goods-group a:focus {
+	background-color: #cccccc;
+}
+
+.tehnomart-goods-group a:active {
+    background-color: #b2b2b2;
+}
+
+.tehnomart-goods-group strong {
+	font-size: 24px;
+    line-height: 30px;
+    color: rgb(255,255,255);
+    font-weight: bold;
+    text-align: center;
+}
+
+.goods-group {
+	background-color: #f6b12d;
+} 
+
+.tools-group {
+	background-color: #3bbbe2;
+} 
+
+.technic-group {
+	background-color: #db90d8;
+} 
+
+.drill-group {
+	background-color: #544238;
+	text-decoration: uppercase; /*не применяется свойство????*/
+} 
+
+.drill-group a {
+	background-color: #ed3543;
+}
+.drill-group a:hover,
+.drill-group a:focus {
+	background-color: #ca2b36;
+}
+
+.drill-group a:active {
+	background-color: #ba2731;
+}
+
+.drill-group span {
+	color: rgb(255,255,255);
+}
+
+.discount-group {
+	background-color: #8dd68e;
+}
+
+.free-dilivery-group {
+	background-color: #ffbf47;
+}
+
+.popular-product-title {
+	background: #f9f5f0;
+}
