--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,11 @@ header {
 }
 
 .site-navigation {
+	margin: 0;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
+	align-items: flex-end;
 }
 
 .site-navigation, 
