--- a/css/style.css
+++ b/css/style.css
@@ -328,9 +328,8 @@ header {
 	color: #ffffff;
 	text-align: left;
 	text-transform: uppercase; 
-    background-color: #e5e5e5; 
-
-
+    background-color: #dd9f28;
+    border-radius: 3px;
 } 
 
 .tehnomart-goods-group a:hover,
@@ -1046,18 +1045,19 @@ img {
 	padding-bottom: 20px; 
 }
 
-.site-navigation li:first-child {
-	padding-left: 22px;
+.site-navigation-item:first-child a {
+	padding-left: 52px;
 }
 
-.site-navigation li:last-child {
-	padding-right: 22px;
+.site-navigation-item:last-child a {
+	padding-right: 52px;
 }
 
 .goods-group strong {
 	display: inline-block;
 	padding-top: 22px;
 	padding-bottom: 11px;
+	padding-left: 23px;
 }
 
 .goods-group a {
